--- a/sandbox/style.css
+++ b/sandbox/style.css
@@ -1,3 +1,4 @@
+/* Default styling */
 body {
 	padding: 0;
 	margin: 0;
@@ -5,24 +6,25 @@ body {
 	font-size: 14px;
 }
 
+/* nav-main */
 .nav-main {
-    background-image: linear-gradient(-180deg, #1968C2 0%, #095CBB 100%);
-    padding: 20px 24px;
-    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.3);
-    color: rgb(112,161,216);
-    color: rgba(255,255,255,0.4);
+  background-image: linear-gradient(-180deg, #1968C2 0%, #095CBB 100%);
+  padding: 20px 24px;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.3);
+  color: rgb(112,161,216);
+  color: rgba(255,255,255,0.4);
 }
 .nav-main ul {
-		padding: 0;
-		margin: 0;
-    list-style-type: none;
+	padding: 0;
+	margin: 0;
+  list-style-type: none;
 }
 .nav-main ul li {
-		padding: 0 14px;
-    display: inline;
+	padding: 0 14px;
+  display: inline;
 }
 .nav-main ul li:first-child {
-		padding-left: 0;
+	padding-left: 0;
 }
 .nav-main ul li a {
 	color: rgb(112,161,216);
@@ -30,5 +32,5 @@ body {
   text-decoration: none;
 }
 .nav-main ul li a:hover, .nav-main ul li a:active {
-    color: #FFFFFF;
+  color: #FFFFFF;
 }
