Add design elements content

--- a/sandbox/style.css
+++ b/sandbox/style.css
@@ -34,3 +34,40 @@ body {
 .nav-main ul li a:hover, .nav-main ul li a:active {
   color: #FFFFFF;
 }
+
+/* nav-local */
+.nav-local {
+	padding: 14px;
+	border-bottom: 1px solid #DADADA;
+	color: #000000;
+}
+.nav-local ul {
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+}
+.nav-local ul li {
+	padding: 0 8px;
+	display: inline;
+}
+.nav-local ul li:first-child {
+	padding-left: 0;
+}
+.nav-local ul li a {
+	padding: 4px 8px;
+	background: #FFFFFF;
+	border-radius: 2px;
+	color: #000000;
+	text-decoration: none;
+}
+.nav-local ul li a:hover {
+	padding: 4px 8px;
+	background: #EEEEEE;
+	border-radius: 2px;
+}
+.nav-local ul li a:active {
+	padding: 4px 8px;
+	background: #ECF8FE;
+	border-radius: 2px;
+	color: #4A90E2;
+}
